# ForgeScan

./: .gitattributes  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  README.md  _a_a_b_b_8hpp.html  _a_a_b_b_8hpp__dep__incl.map  _a_a_b_b_8hpp__dep__incl.md5  _a_a_b_b_8hpp__incl.map  _a_a_b_b_8hpp__incl.md5  _a_a_b_b_8hpp_source.html  _arg_parser_8hpp.html  _arg_parser_8hpp.js  _arg_parser_8hpp__dep__incl.map  _arg_parser_8hpp__dep__incl.md5  _arg_parser_8hpp__incl.map  _arg_parser_8hpp__incl.md5  _arg_parser_8hpp_source.html  _axis_8hpp.html  _axis_8hpp__dep__incl.map  _axis_8hpp__dep__incl.md5  _axis_8hpp__incl.map  _axis_8hpp__incl.md5  _axis_8hpp_source.html  _binary_8hpp.html  _binary_8hpp__dep__incl.map  _binary_8hpp__dep__incl.md5  _binary_8hpp__incl.map  _binary_8hpp__incl.md5  _binary_8hpp_source.html  _binary_t_s_d_f_8hpp.html  _binary_t_s_d_f_8hpp__dep__incl.map  _binary_t_s_d_f_8hpp__dep__incl.md5  _binary_t_s_d_f_8hpp__incl.map  _binary_t_s_d_f_8hpp__incl.md5  _binary_t_s_d_f_8hpp_source.html  _camera_8hpp.html  _camera_8hpp__dep__incl.map  _camera_8hpp__dep__incl.md5  (+745 more)
.github/workflows/: gh-pages.yaml
CMake/: ForgeScanConfig.cmake.in
archive/: README.md  csv_from_octree_pc.cpp  csv_from_voxel_pc.cpp  depth_camera_sim.cpp  sphere_octomap_and_pc.cpp  test_indices.cpp
demos/: CMakeLists.txt  demo_policy.cpp  sim_scan.cpp  sim_sphere_scan.cpp  test_element.cpp  test_grid.cpp  test_traversal.cpp  test_voxel.cpp  test_voxel_element.cpp  test_voxel_grid.cpp
doc/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  developer_guide.md  installation.md
docker/: Dockerfile  Dockerfile.cuda  README.md
include/ForgeScan/: Manager.hpp  depth_sensor.h  entity.h  forgescan_types.h  grid_processor.h  grid_traversal.h  memory_utils.h  sensor_intrinsics.h  sensor_reading.h  sim_sensor_reading.h  timing_utils.h  types.h  view_tracker.h  voxel.h  voxel_element.h  voxel_grid.h  voxel_grid_properties.h
include/ForgeScan/Common/: AABB.hpp  Definitions.hpp  Entity.hpp  Exceptions.hpp  Grid.hpp  RayTrace.hpp  Types.hpp  VectorMath.hpp  VoxelData.hpp
include/ForgeScan/Data/: RayTrace.hpp  Reconstruction.hpp
include/ForgeScan/Data/VoxelGrids/: Binary.hpp  BinaryTSDF.hpp  Constructor.hpp  CountUpdates.hpp  CountViews.hpp  Occupancy.hpp  OccupancyTSDF.hpp  Probability.hpp  TSDF.hpp  UpdateCount.hpp  VoxelGrid.hpp
include/ForgeScan/DepthSensor/: camera.h  depth_sensor.h  intrinsics.h  laser.h  sensor.h  sensor_intrinsics.h
include/ForgeScan/Metrics/: Constructor.hpp  Metric.hpp  OccupancyConfusion.hpp  sensor_record.h
include/ForgeScan/Metrics/GroundTruth/: ExperimentVariants.hpp  Occupancy.hpp  TSDF.hpp
include/ForgeScan/Policies/: Constructor.hpp  Policy.hpp  low_discrepancy.h  max_discrepancy.h  ordered_uniform.h  policy.h  random.h  random_sphere.h  uniform.h
include/ForgeScan/Policies/Heuristic/: Occplane.hpp
include/ForgeScan/Policies/Precomputed/: Normal.hpp
include/ForgeScan/Policies/Simple/: Axis.hpp  RandomSphere.hpp  Sphere.hpp
include/ForgeScan/Primitives/: box.h  primative.h  primative_geometry.h  scene.h  sphere.h
include/ForgeScan/Sensor/: Camera.hpp  DepthImageProccessing.hpp  ImShow.hpp  Intrinsics.hpp
include/ForgeScan/Simulation/: Box.hpp  Constructor.hpp  GroundTruthScene.hpp  Primitive.hpp  Scene.hpp  Sphere.hpp
include/ForgeScan/TSDF/: grid.h  processor.h  traversal.h  voxel.h
include/ForgeScan/Utilities/: ArgParser.hpp  Files.hpp  Math.hpp  MemoryUse.hpp  Random.hpp  Strings.hpp  Timer.hpp  XDMF.hpp  arg_parser.h  simple_timer.h  vector_memory_use.h
include/ForgeScanShapePrimatives/: sphere.h
include/ForgeScanUtils/: arg_parser.h  memory_utils.h  timing_utils.h
include/point_gen/: grid_processor.h  memory_utils.h  voxel_grid.h
scripts/: plot_confusion.py  plot_policy_views.py  plot_views.py  run_make_ground_truth.py  run_precompute_views.py  sweep_run_experiment.py
scripts/experiments/: experiment_0.py  experiment_1.py  experiment_2.py  experiment_3.py  experiment_4.py  experiment_5.py
scripts/figures/: plot_experiment_result_confusion.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+98 more)
share/: .gitignore  README.md
share/Meshes/: .gitignore  README.md  abc1.stl  abc3.stl  abc4.stl  abc5.stl  abc6.stl  abc7.stl  abc8.stl  abc9.stl  bin.stl  box.stl  sphere.stl
src/: CMakeLists.txt  grid_processor.cpp  grid_traversal.cpp  sim_sensor_reading.cpp  sim_sphere_scan.cpp  test_traversal.cpp  test_voxel_element.cpp  test_voxel_grid.cpp  voxel_element.cpp  voxel_grid.cpp  voxel_grid_io.cpp  voxel_grid_traversal.cpp
src/Examples/: CMakeLists.txt
src/Examples/Reconstruction/: CMakeLists.txt  main.cpp
src/Examples/Scene/: CMakeLists.txt  main.cpp
src/Experiments/: CMakeLists.txt
src/Experiments/MakeGroundTruth/: CMakeLists.txt  main.cpp
src/Experiments/PrecomputeViews/: CMakeLists.txt  main.cpp
src/Experiments/RunExperiment/: CMakeLists.txt  main.cpp
src/Metrics/: sensor_record_io.cpp
src/TSDF/: grid_io.cpp  grid_traversal.cpp  processor.cpp  traversal.cpp
src/examples/: CMakeLists.txt
src/examples/Demo/: CMakeLists.txt  Demo.cpp
src/examples/GroundTruth/: CMakeLists.txt  GroundTruth.cpp
